# pdf-reader-pro

./: .gitignore  .vercelignore  build-all.cjs  build-log.txt  gen_keys.cjs  gen_keys.js  package-lock.json  package.json  release-update.cjs  svelte.config.js  updater-keys  updater-keys.pub  vercel.json  vite.config.ts
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts  stores.ts  types.ts  updater.ts  utils.ts  web-pdf-engine.ts
src/lib/components/: App.svelte  CommandPalette.svelte  GlobalSearch.svelte  PdfViewer.svelte  SearchBar.svelte  TabBar.svelte  Toolbar.svelte  ToolbarButton.svelte  WelcomeScreen.svelte
src/routes/: +page.svelte  +page.ts
static/: update.json
