[package]
name = "pdf-reader-pro"
version = "0.1.0"
description = "A blazing-fast PDF reader and editor built with Tauri v2 + Rust"
authors = ["you"]
edition = "2021"

[lib]
name = "pdf_reader_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdfium-render = { version = "0.8", features = ["image", "thread_safe"] }
image = { version = "0.25", features = ["jpeg", "png"] }
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
parking_lot = "0.12"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-dialog = "2"
